--- a/app/src/main/res/layout/fragment_summary_expenses.xml
+++ b/app/src/main/res/layout/fragment_summary_expenses.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     tools:context="co.mobilemakers.expensesmanager.SummaryExpensesFragment">
 
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ExpandableListView android:id="@+id/list"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent" />
 
 </FrameLayout>
