--- a/app/src/main/res/layout/fragment_event_description.xml
+++ b/app/src/main/res/layout/fragment_event_description.xml
@@ -15,26 +15,26 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/text_view_sum_invoices_title"
-            android:text="@string/invoices_title"
-            android:layout_width="wrap_content"
+            android:text="@string/text_view_sum_invoices"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             />
         <TextView
             android:id="@+id/text_view_sum_invoices"
             android:text="@string/zero_value"
-            android:layout_width="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            />
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:gravity="center"/>
     </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
 
-        <ListView
-            android:id="@+id/list_view_invoices"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
