--- a/app/src/main/res/layout/childrow.xml
+++ b/app/src/main/res/layout/childrow.xml
@@ -1,45 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- CHILD -->
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
-             android:stretchColumns="1" android:paddingTop="0dip" android:layout_gravity="top"
-
-    > <!--   android:background="@drawable/bar_bg" -->
-
-    <TableRow>
+             android:paddingTop="0dip"
+             android:layout_gravity="top"
+    >
         <ImageView
             android:id="@+id/image"
             android:layout_width="30dip"
             android:layout_height="30dip"
             android:layout_marginLeft="30dip"/>
-        <TableLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="1" android:paddingTop="0dip" android:layout_gravity="top"
-            >
-            <TableRow>
+            android:stretchColumns="1" android:paddingTop="0dip" android:layout_gravity="top">
                 <TextView
                     android:id="@+id/text1"
                     style="@style/Base.TextAppearance.AppCompat.Button"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1" android:layout_gravity="left|center_vertical"
-                    android:textSize="12dip" android:layout_marginLeft="30dip"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12dip"
 
 
                     />
-            </TableRow>
-            <TableRow >
                 <TextView
                     android:id="@+id/text"
                     style="@style/AppTheme"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_weight="1" android:layout_gravity="left|center_vertical"
-                    android:textSize="12dip" android:layout_marginLeft="30dip"/>
-            </TableRow>
-        </TableLayout>
-
-    </TableRow>
-</TableLayout>
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:textSize="12dip"/>
+        </LinearLayout>
+</LinearLayout>
