--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -8,19 +8,25 @@
     >
 
 
-    <EditText   android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_text_event_name"
-                android:layout_gravity="center_horizontal"
-                android:hint="@string/edit_text_event_name_hint"
-                android:gravity="center"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText   android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_text_event_description"
-                android:layout_gravity="center_horizontal"
-                android:hint="@string/edit_text_event_description_hint"
-                android:gravity="center"/>
+        <EditText   android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_text_event_name"
+                    android:layout_gravity="center_horizontal"
+                    android:hint="@string/edit_text_event_name_hint"
+                    android:gravity="center"/>
+
+        <EditText   android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_text_event_description"
+                    android:layout_gravity="center_horizontal"
+                    android:hint="@string/edit_text_event_description_hint"
+                    android:gravity="center"/>
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -37,20 +43,47 @@
 
         <Button android:id="@+id/button_add_friend_event"
                 android:layout_width="56dp"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:text="@string/button_add_friend_event"
                 android:background="@drawable/button_style"/>
+
     </LinearLayout>
 
-    <ListView   android:id="@android:id/list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="bottom|right"
+        android:layout_gravity="bottom|right"
+        android:layout_weight="7">
 
-    <Button android:id="@+id/button_create_event"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_create_event"
-            android:layout_gravity="right"
-            android:enabled="false"/>
+        <ListView   android:id="@android:id/list"
+                    android:layout_width="match_parent"
+                    android:divider="#f2e4e4"
+                    android:dividerHeight="1dip"
+                    android:layout_height="match_parent"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@android:id/empty"
+            android:text="@string/text_view_empty_create_event_list"
+            android:gravity="center_vertical|center_horizontal"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:gravity="bottom|right"
+        android:layout_weight="1">
+
+        <Button android:id="@+id/button_create_event"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_create_event"
+                android:layout_gravity="right"
+                android:enabled="false"/>
+    </LinearLayout>
 
 </LinearLayout>
