--- a/app/src/main/res/layout/fragment_event_description.xml
+++ b/app/src/main/res/layout/fragment_event_description.xml
@@ -35,6 +35,13 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/activity_vertical_margin"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@android:id/empty"
+        android:text="@string/text_view_empty_event_description_list"
+        android:gravity="center_vertical|center_horizontal"/>
 
 </LinearLayout>
