--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/expenses_manager"
+        android:text="@string/app_name"
         android:id="@+id/text_view_expenses_manager"
         android:layout_gravity="center_horizontal"
         android:padding="20dp"
