--- a/app/src/main/res/layout/grouprow.xml
+++ b/app/src/main/res/layout/grouprow.xml
@@ -20,7 +20,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textStyle="bold"
                     android:layout_weight="1"
-                    android:text="@string/text_view_title_you_owe"/>
+                    android:text="@string/text_view_title_you_owe"
+                    android:paddingLeft="16dp"/>
 
                 <TextView
                     android:id="@+id/text_view_group_subtitle"
